# themis-decisions

./: .gitignore  README.md  render.yaml
backend/: README.md  generate_migration.sh  pyproject.toml  reset_database.sh
backend/alembic/: env.py
backend/alembic/versions/: 49ffbd90ef7e_.py  5d03a847b91d_initial_migration.py
backend/app/: database.py  main.py  models.py  schemas.py  scoring.py  websocket.py
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  index.css  store.ts
frontend/src/screens/: HomeScreen.tsx  NameScreen.tsx  PollScreen.tsx  ResultScreen.tsx
